--- a/pomodoro2/index.html
+++ b/pomodoro2/index.html
@@ -13,7 +13,7 @@
   <div class="modes">
     <a class="mode" href="#" data-time="2700">pomodoro</a>
     <a class="mode" href="#" data-time="900">break</a>
-    <a class="mode" href="#" data-time="0">pause</a>
+    <a class="mode" href="#" data-time="">pause</a>
   </div>
 
   <div class="get-started">
@@ -25,24 +25,6 @@
       <h1 class="pomodoro__time"></h1>
     </div>
   </main>
-
-  <div class="tooltip-container">
-    <article class="help__tooltip">
-      <img src="./src/question.svg" alt="Question mark" width="50">
-      <div class="help__tooltip-content">
-        <h4>Pomodoro cycle:</h4>
-        <ul>
-          <li>Pomodoro</li>
-          <li>Short break</li>
-          <li>Pomodoro</li>
-          <li>Short break</li>
-          <li>Pomodoro</li>
-          <li>Long break</li>
-        </ul>
-        <p>Repeat!</p>
-      </div>
-    </article>
-  </div>
 
   <audio src="./src/sounds/short-alarm-clock-sound.mp3"></audio>
 
