--- a/pomodoro2/index.html
+++ b/pomodoro2/index.html
@@ -11,9 +11,10 @@
 <body>
   <h1 class="main-heading">pomodoro</h1>
   <div class="modes">
-    <a class="mode" href="#" data-time="2700">pomodoro</a>
-    <a class="mode" href="#" data-time="900">break</a>
-    <a class="mode" href="#" data-time="">pause</a>
+    <a class="mode" href="#" data-time="2700">long session</a>
+    <a class="mode" href="#" data-time="900">long break</a>
+    <a class="mode" href="#" data-time="1500">short session</a>
+    <a class="mode" href="#" data-time="300">short break</a>
   </div>
 
   <div class="get-started">
